--- a/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
@@ -16,15 +16,19 @@
         </tr>
         @foreach (var account in Model.Accounts)
         {
-            <tr>
-                <td>@Html.DisplayFor(x => account.AccountNumber)</td>
-                <td>@Html.DisplayFor(x => account.AccountType)</td>
-                <td>@Html.DisplayFor(x => account.Balance)</td>
-                <td>
-                    <a class="btn btn-primary"
-                       asp-action="Deposit" asp-route-id="@account.AccountNumber">Deposit</a>
-                </td>
-            </tr>
+    <tr>
+        <td>@Html.DisplayFor(x => account.AccountNumber)</td>
+        <td>@Html.DisplayFor(x => account.AccountType)</td>
+        <td>@Html.DisplayFor(x => account.Balance)</td>
+        <td>
+            <a class="btn btn-primary"
+               asp-action="Deposit" asp-route-id="@account.AccountNumber">Deposit</a>
+        </td>
+        <td>
+            <a class="btn btn-primary"
+               asp-action="Withdraw" asp-route-id="@account.AccountNumber">Withdraw</a>
+        </td>
+    </tr>
         }
     </table>
 </div>
