--- a/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
@@ -23,11 +23,14 @@
         <td>
             <a class="btn btn-primary"
                asp-action="Deposit" asp-route-id="@account.AccountNumber">Deposit</a>
-        </td>
-        <td>
+
             <a class="btn btn-primary"
                asp-action="Withdraw" asp-route-id="@account.AccountNumber">Withdraw</a>
+
+            <a class="btn btn-primary"
+               asp-action="Withdraw" asp-route-id="@account.AccountNumber">Transfer</a>
         </td>
+
     </tr>
         }
     </table>
