--- a/InternetBanking/InternetBanking/Views/Customer/Deposit.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Deposit.cshtml
@@ -10,7 +10,7 @@
         <form asp-action="Deposit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label for="Amount" class="control-label"></label>
+                <label for="Amount" class="control-label">Amount</label>
                 <input id="Amount" name="Amount" class="form-control" value="@ViewBag.Amount?.ToString("0.00")"
                        data-val="true" data-val-number="The field Amount must be a number."
                        data-val-required="The Amount field is required." />
