--- a/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
@@ -28,7 +28,7 @@
                asp-action="Withdraw" asp-route-id="@account.AccountNumber">Withdraw</a>
 
             <a class="btn btn-primary"
-               asp-action="Withdraw" asp-route-id="@account.AccountNumber">Transfer</a>
+               asp-action="Transfer" asp-route-id="@account.AccountNumber">Transfer</a>
         </td>
 
     </tr>
