--- a/InternetBanking/InternetBanking/Views/Customer/Transfer.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Transfer.cshtml
@@ -1,1 +1,42 @@
-﻿
+﻿@model Account
+@{
+    ViewData["Title"] = "ATM Transfer";
+}
+
+<h1 class="display-4">Account Number @Model.AccountNumber (@Model.AccountType)</h1>
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Transfer">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+
+                <label for="ToAccount" class="control-label">To Account</label>
+                <input id="ToAccount" name="ToAccount" class="form-control"
+                       data-val="true" data-val-number="The field must be a number."
+                       data-val-required="The To Account field is required." />
+                @Html.ValidationMessage("ToAccount", new { @class = "text-danger" })
+
+                <label for="Amount" class="control-label">Amount</label>
+                <input id="Amount" name="Amount" class="form-control" value="@ViewBag.Amount?.ToString("0.00")"
+                       data-val="true" data-val-number="The field Amount must be a number."
+                       data-val-required="The Amount field is required." />
+                @Html.ValidationMessage("Amount", new { @class = "text-danger" })
+
+                <label for="Comment" class="control-label">Comment</label>
+                <input id="Comment" name="Comment" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Transfer" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to Accounts</a>
+</div>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
