--- a/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
@@ -22,7 +22,7 @@
         <td>@Html.DisplayFor(x => account.Balance)</td>
         <td>
             <a class="btn btn-primary"
-               asp-action="Deposit" asp-route-id="@account.AccountNumber">Deposit</a>
+               asp-action="Deposit" asp-route-accountNumber="@account.AccountNumber">Deposit</a>
 
             <a class="btn btn-primary"
                asp-action="Withdraw" asp-route-id="@account.AccountNumber">Withdraw</a>
