Refactored withdraw to use VM

--- a/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Index.cshtml
@@ -25,7 +25,7 @@
                asp-action="Deposit" asp-route-accountNumber="@account.AccountNumber">Deposit</a>
 
             <a class="btn btn-primary"
-               asp-action="Withdraw" asp-route-id="@account.AccountNumber">Withdraw</a>
+               asp-action="Withdraw" asp-route-accountNumber="@account.AccountNumber">Withdraw</a>
 
             <a class="btn btn-primary"
                asp-action="Transfer" asp-route-id="@account.AccountNumber">Transfer</a>
