--- a/InternetBanking/InternetBanking/Views/Customer/Withdraw.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Withdraw.cshtml
@@ -1,13 +1,14 @@
-﻿@model Account
+﻿@model InternetBanking.ViewModels.ATMViewModel
 @{
     ViewData["Title"] = "Withdraw";
 }
 
-<h1 class="display-4">Account Number @Model.AccountNumber (@Model.AccountType)</h1>
+<h1 class="display-4">Account Number @Model.Account.AccountNumber (@Model.Account.AccountType)</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Withdraw">
+            <input type="hidden" asp-for="AccountNumber" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label for="Amount" class="control-label">Amount</label>
