--- a/InternetBanking/InternetBanking/Views/Customer/Transfer.cshtml
+++ b/InternetBanking/InternetBanking/Views/Customer/Transfer.cshtml
@@ -1,21 +1,21 @@
-﻿@model Account
+﻿@model InternetBanking.ViewModels.TransferViewModel
 @{
     ViewData["Title"] = "ATM Transfer";
 }
 
-<h1 class="display-4">Account Number @Model.AccountNumber (@Model.AccountType)</h1>
+<h1 class="display-4">Account Number @Model.Account.AccountNumber (@Model.Account.AccountType)</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Transfer">
+            <input type="hidden" asp-for="FromAccountNumber" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-
-                <label for="ToAccount" class="control-label">To Account</label>
-                <input id="ToAccount" name="ToAccount" class="form-control"
+                <label for="ToAccountNumber" class="control-label">To Account</label>
+                <input id="ToAccountNumber" name="ToAccountNumber" class="form-control"
                        data-val="true" data-val-number="The field must be a number."
                        data-val-required="The To Account field is required." />
-                @Html.ValidationMessage("ToAccount", new { @class = "text-danger" })
+                @Html.ValidationMessage("ToAccountNumber", new { @class = "text-danger" })
 
                 <label for="Amount" class="control-label">Amount</label>
                 <input id="Amount" name="Amount" class="form-control" value="@ViewBag.Amount?.ToString("0.00")"
