--- a/InternetBanking/InternetBanking/Views/Home/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div>
-    <h1 class="display-4">National Wealth Bank of Australasia</h1>
+    <h1 class="display-4">Most Common Bank of Australasia</h1>
 
     <div class="text-center">
         <img src="~/img/bank.jpg" alt="bank" />
