--- a/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
@@ -1,1 +1,23 @@
-﻿<h2>Pay Bills</h2>
+﻿@model InternetBanking.ViewModels.BillPayViewModel
+@{
+    ViewData["Title"] = "Schedule Bill Pay";
+}
+
+<h1>Schedule Bill Pay - @Model.Customer.Name</h1>
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="CreateBillPay">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="FromAccount" class="control-label"></label>
+                @Html.DropDownList("Account", Model.Customer.Accounts.Select(a => new SelectListItem
+           {
+               Value = a.AccountNumber.ToString(),
+               Text = a.AccountNumber.ToString() + " -- " + a.AccountType.ToString(),
+               Selected = "select" == a.AccountNumber.ToString()
+           }))
+            </div>
+        </form>
+    </div>
+</div>
