--- a/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateBillPay">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FromAccount" class="control-label"></label>
@@ -49,3 +49,11 @@
         </form>
     </div>
 </div>
+
+<div>
+    <a asp-action="Index">Back to Accounts</a>
+</div>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
