--- a/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
@@ -10,8 +10,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FromAccount" class="control-label"></label>
-                @Html.DropDownList("Account", Model.Customer.Accounts.Select(a => new SelectListItem
+                <label asp-for="FromAccountNumber" class="control-label"></label>
+                @Html.DropDownListFor(m => m.FromAccountNumber, Model.Customer.Accounts.Select(a => new SelectListItem
            {
                Value = a.AccountNumber.ToString(),
                Text = a.AccountNumber.ToString() + " -- " + a.AccountType.ToString(),
@@ -19,8 +19,8 @@
            }))
             </div>
             <div class="form-group">
-                <label asp-for="ToPayee" class="control-label"></label>
-                @Html.DropDownList("To Payee", Model.Payees.Select(p => new SelectListItem
+                <label asp-for="ToPayeeID" class="control-label"></label>
+                @Html.DropDownListFor(m => m.ToPayeeID, Model.Payees.Select(p => new SelectListItem
            {
                Value = p.PayeeID.ToString(),
                Text = $"{p.PayeeName} -- {p.PayeeID}",
