--- a/InternetBanking/InternetBanking/Views/Shared/_Layout.cshtml
+++ b/InternetBanking/InternetBanking/Views/Shared/_Layout.cshtml
@@ -52,6 +52,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="BillPay" asp-action="Index">Pay Bills</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="BillPay" asp-action="DisplayBillPays">Bill Pay Information</a>
+                            </li>
                         }
                     </ul>
                 </div>
