--- a/InternetBanking/InternetBanking/Views/BillPay/Edit.cshtml
+++ b/InternetBanking/InternetBanking/Views/BillPay/Edit.cshtml
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to Accounts</a>
+    <a asp-action="DisplayBillPays">Back to Bill Pay information</a>
 </div>
 
 @section Scripts {
