Small change to button layout for BillPay page

--- a/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/BillPay/Index.cshtml
@@ -11,6 +11,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FromAccountNumber" class="control-label"></label>
+                <br />
                 @Html.DropDownListFor(m => m.FromAccountNumber, Model.Customer.Accounts.Select(a => new SelectListItem
            {
                Value = a.AccountNumber.ToString(),
@@ -20,6 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ToPayeeID" class="control-label"></label>
+                <br />
                 @Html.DropDownListFor(m => m.ToPayeeID, Model.Payees.Select(p => new SelectListItem
            {
                Value = p.PayeeID.ToString(),
@@ -40,19 +42,20 @@
             <div class="form-group">
                 @*Code referenced from : https://stackoverflow.com/questions/44797422/mvc-enum-dropdownlist/44797835*@
                 <label asp-for="Period" class="control-label"></label>
+                <br />
                 <select asp-for="Period" asp-items="@Html.GetEnumSelectList<BillPeriod>()"></select>
                 <span asp-validation-for="Period" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+
+                <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Cancel</a>
-</div>
+
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
