Admin login done

--- a/InternetBanking/AdminApi/AdminApp/Views/Home/Index.cshtml
+++ b/InternetBanking/AdminApi/AdminApp/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Most Common Bank of Australasia</h1>
+    <br />
+    <h2>Welcome to Internet Banking Admin portal.</h2>
 </div>
