--- a/InternetBanking/AdminApi/AdminApp/Views/Transaction/Index.cshtml
+++ b/InternetBanking/AdminApi/AdminApp/Views/Transaction/Index.cshtml
@@ -28,10 +28,28 @@
             </div>
         </form>
     </div>
+
+    <table class="table">
+        <tr>
+            <th>Transaction ID</th>
+            <th>Transaction ID</th>
+            <th>Transaction ID</th>
+            <th>Transaction ID</th>
+
+        </tr>
+
+        @foreach(var transaction in Model.Transactions)
+        {
+    <tr>
+        <td>@Html.DisplayFor(x => transaction.TransactionId)</td>
+        <td>@Html.DisplayFor(x => transaction.TransactionType)</td>
+        <td>@Html.DisplayFor(x => transaction.AccountNumber)</td>
+        <td>@Html.DisplayFor(x => transaction.DestinationAccountNumber)</td>
+        <td>@Html.DisplayFor(x => transaction.Amount)</td>
+
+    </tr>
+        }
+    </table>
+
 </div>
 
-<table class="table">
-    <tr>
-    
-    </tr>
-</table>
