--- a/InternetBanking/AdminApi/AdminApp/Views/Shared/_Layout.cshtml
+++ b/InternetBanking/AdminApi/AdminApp/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                                 </span>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Transaction" asp-action="Index">View Transactions</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Login" asp-action="Logout">Logout</a>
                             </li>
                         }
