--- a/InternetBanking/AdminApi/AdminApp/Views/Shared/_Layout.cshtml
+++ b/InternetBanking/AdminApi/AdminApp/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                                 <a class="nav-link text-dark" asp-controller="Transaction" asp-action="Index">View Transactions</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="UserAccount" asp-action="Index">Lock account</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Login" asp-action="Logout">Logout</a>
                             </li>
                         }
@@ -46,9 +49,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
