Bill pay VIEW WIP

--- a/InternetBanking/AdminApi/AdminApp/Views/Shared/_Layout.cshtml
+++ b/InternetBanking/AdminApi/AdminApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav">
                         @{
                             var isLoggedIn = !string.IsNullOrEmpty(Context.Session.GetString(nameof(Admin.Username)));
@@ -34,6 +34,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="UserAccount" asp-action="Index">Lock account</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="BillPay" asp-action="Index">Block bill pay</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Login" asp-action="Logout">Logout</a>
