--- a/InternetBanking/InternetBanking/Views/MyStatements/ViewTransactions.cshtml
+++ b/InternetBanking/InternetBanking/Views/MyStatements/ViewTransactions.cshtml
@@ -12,7 +12,7 @@
 
 <h1>Transactions for @account.AccountNumber</h1>
 <div>
-    <h1>Orders for @account.AccountNumber: @account.AccountType</h1>
+    <h1>Transactions for @account.AccountNumber: @account.AccountType</h1>
     <table class="table">
         <tr>
             <th>@Html.DisplayNameFor(x => x.GetEnumerator().Current.TransactionID)</th>
