--- a/InternetBanking/InternetBanking/Views/MyStatements/Index.cshtml
+++ b/InternetBanking/InternetBanking/Views/MyStatements/Index.cshtml
@@ -4,6 +4,8 @@
     var account = (Account)ViewBag.Account;
 }
 
+<h2>Select an account type to see transactions.</h2>
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="IndexToViewTransaction">
