--- a/InternetBanking/InternetBanking/Views/Shared/_Layout.cshtml
+++ b/InternetBanking/InternetBanking/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Login" asp-action="Login">Login</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="UserAccount" asp-action="Register">Register</a>
+                            </li>
                         }
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
