--- a/InternetBanking/InternetBanking/Views/UserAccount/Register.cshtml
+++ b/InternetBanking/InternetBanking/Views/UserAccount/Register.cshtml
@@ -21,9 +21,9 @@
                 <span asp-validation-for="LoginID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LoginID"></label>
-                <input asp-for="LoginID" class="form-control" />
-                <span asp-validation-for="LoginID" class="text-danger"></span>
+                <label asp-for="CustomerID"></label>
+                <input asp-for="CustomerID" class="form-control" />
+                <span asp-validation-for="CustomerID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name"></label>
